Changed button html elements(due to testing a bug where text overlapped the button), Added new questions to mediumList, update style.css to fix text overlap, added difficulty selector code so you can now choose a level to play at

--- a/asset/style.css
+++ b/asset/style.css
@@ -111,10 +111,12 @@ h2 {
   padding: 2rem;
   background-color: #cebfd5;
   border-radius: 1rem;
-  font-size: 20px;
-  height: 35px;
-  width:100px;
+  font-size: 100%;
+  font-size: 1rem;
+  width: 100px;
+  height: 50px;
 }
+
 #answers button {
   color: black;
   text-decoration: none;
